# signalk-chart-locker

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  README.md  RUST_THIRD_PARTY_LICENSES.md  THIRD_PARTY_NOTICES.md  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.browser.json  tsconfig.json  tsconfig.panel.json  webpack.config.cjs
.claude/agents/: rust-signalk-expert.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  container-cleanup.yml  container-image.yml  container-pr.yml  plugin-ci.yml  publish.yml
.superpowers/sdd/: task-1-report.md
container/: .dockerignore  Cargo.toml  Dockerfile  about.hbs  about.toml
container/engine/: Cargo.toml
container/engine/.cargo/: config.toml
container/engine/corpus/: INDEX.json  README.md
container/engine/corpus/border-fallback/: calls.json  request.json  result.json
container/engine/corpus/border-no-foreign-rings/: calls.json  result.json
container/engine/corpus/border-stays-in-country/: calls.json  request.json  result.json
container/engine/corpus/decline-antimeridian/: calls.json  request.json  result.json
container/engine/corpus/decline-fetch-failed/: calls.json  result.json
container/engine/corpus/decline-no-coverage/: calls.json
container/engine/corpus/decline-no-path-disconnected/: calls.json  request.json
container/engine/corpus/decline-no-path-one-cell/: calls.json  request.json  result.json
container/engine/corpus/decline-unsnappable/: calls.json  request.json  result.json
container/engine/corpus/enc-fails-tile-covers/: calls.json
container/engine/corpus/enc-l-channel/: calls.json  request.json  result.json
container/engine/corpus/enc-land-block-detour/: calls.json  request.json  result.json
container/engine/corpus/optimize-corridor/: calls.json  request.json  result.json
container/engine/corpus/snap-default-reach/: calls.json  request.json  result.json
container/engine/corpus/snap-past-pocket/: calls.json  request.json  result.json
container/engine/corpus/tile-water-island-hole/: calls.json  request.json  result.json
container/engine/corpus/tile-water-l-channel/: calls.json  result.json
container/engine/src/: astar.rs  channel_router.rs  clock.rs  geometry.rs  lib.rs  nav_grid.rs  path_simplify.rs  provider.rs  providers.rs  snap.rs  types.rs  water_index.rs
container/engine/tests/: deadline.rs  non_finite.rs  parity.rs
container/gpkg/: Cargo.toml
container/gpkg/src/: lib.rs
container/localprovider/: Cargo.toml
container/localprovider/src/: fixture.rs  gpkg.rs  lib.rs  store.rs
container/prep/: Dockerfile  README.md  data_parity.py  prep_region.py
container/router/: Cargo.toml
container/router/src/: lib.rs  main.rs
container/router/tests/: http_test.rs
container/storage-spike/: Cargo.toml  README.md  VERDICT.md  gen_sample.py  vectors.json  verify.py
container/storage-spike/src/: gpkg.rs  main.rs
container/tilecache/: Cargo.toml  Dockerfile
container/tilecache/src/: cache.rs  fetcher.rs  geocode.rs  geom.rs  health.rs  lib.rs  main.rs  response.rs  routes.rs  source.rs  ssrf.rs  state.rs  style.rs  sweep.rs  upstream.rs  warm.rs
container/tilecache/tests/fixtures/: v0.5.0-cache.sql
docs/: API.md  DEPENDENCY_UPDATES.md  OPERATIONS.md  README.md
docs/superpowers/: 2026-06-27-cleanup-status.md  2026-06-27-m3-handoff.md  2026-06-27-tilecache-v1-progress.md  2026-06-28-tilecache-release-and-roadmap-plan.md  2026-06-30-publish-runbook.md  README.md
fixtures/browser/: index.html  main.tsx  vite.config.ts
scripts/: capture-panel-screenshots.mjs  check-package-contents.mjs  check-panel-bundle.mjs  check-signalk-integration.mjs  cleanup-container-versions.mjs  container-manifest-contract.mjs  container-manifest-metadata.mjs  container-promotion-contract.mjs  create-release-tarball.mjs  link-signalk-admin.mjs  package-contract.mjs  promote-container-image.mjs  release-docs-contract.mjs  release-metadata.mjs  release-policy.mjs  release-tarball-contract.mjs  run-node-rust-contract.mjs  run-node-tests.mjs  rust-license-contract.mjs  rust-license-report.mjs  select-container-promotion-tags.mjs  verify-container-image.mjs  verify-release-tarball.mjs
src/: index.ts
src/bridge/: route-on-water-bridge.ts
src/charts/: chart-id.ts  chart-registry.ts  discovery.ts  mutual-exclusion.ts  overrides.ts  pmtiles-file-source.ts  pmtiles-metadata.ts
src/http/: cache-info-route.ts  chart-management-routes.ts  pmtiles-routes.ts  prewarm-routes.ts  regions-routes.ts  tile-routes.ts
src/panel/: PluginConfigurationPanel.module.css  PluginConfigurationPanel.tsx  config-reducer.ts  config-types.ts  index.tsx  normalize-config.ts  relative-time.ts  request-timeout.ts  styles.ts
src/plugin/: plugin.ts
src/runtime/: bounded-response.ts  container-fetch.ts  container-health.ts  container-manager.ts  control-token.ts  free-space.ts  host-health-monitor.ts  json-state.ts  position-warm.ts  (+8 more)
test/: admin-gate.test.ts  bounded-response.test.ts  cache-cap.test.ts  cache-info-route.test.ts  cache-routes.test.ts  chart-discovery.test.ts  chart-id.test.ts  chart-management-routes.test.ts  chart-overrides.test.ts  chart-registry.test.ts  container-manager.test.ts  control-token.test.ts  free-space.test.ts  geocode-proxy.test.ts  helpers-fakeapp.test.ts  helpers.ts  host-health-monitor.test.ts  json-state.test.ts  mutual-exclusion.test.ts  node-rust-contract.test.ts  normalize-config.test.ts  panel-logic.test.ts  plugin-charts.test.ts  plugin-id.test.ts  plugin-integration.test.ts  plugin.test.ts  pmtiles-file-source.test.ts  pmtiles-fixture.ts  pmtiles-metadata.test.ts  pmtiles-routes.test.ts  position-warm.test.ts  position-warmer.test.ts  prewarm-routes.test.ts  prewarm-store.test.ts  region-reconciliation.test.ts  region-routes.test.ts  regions-crud.test.ts  regions-routes.test.ts  regions-store.test.ts  release-tooling.test.mjs  (+9 more)
(+60 files in other folders)
