# The container Rust crates as one workspace: one lock file, one target dir, one lint and profile
# surface, and a single root .cargo/config.toml so the FMA flag applies to every crate
# automatically. This is a Cargo workspace, not an npm monorepo: the plugin stays one npm package.
[workspace]
resolver = "2"
members = [
    "tilecache",
]
