[package]
name = "binnacle-tilecache"
version = "0.1.0"
edition = "2021"

[lib]
name = "binnacle_tilecache"
path = "src/lib.rs"

[[bin]]
name = "tilecache"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "gzip", "brotli"] }
bytes = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
