[package]
name = "chart-locker-tilecache"
version = "0.1.0"
edition = "2021"

[lib]
name = "chart_locker_tilecache"
path = "src/lib.rs"

[[bin]]
name = "tilecache"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
axum = "0.8"
# `rustls` (was `rustls-tls-webpki-roots`) selects rustls-platform-verifier, so egress TLS relies on the runtime's system CA bundle; see the Dockerfile comment (rustls-platform-verifier / CA bundle).
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "brotli"] }
bytes = "1"
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
